# shape_detection_fitting

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  active_semantic_mapping_nodelets.xml  package.xml  shape_detection_fitting_nodelets.xml
cmake/: FindCaffe.cmake
config/: config.yaml  detection.table.ros.ork
files/: mean.binaryproto  train_iter_100.caffemodel  train_val.prototxt
files/binary_classifier/: cylinder_classifier  mean.binaryproto  train_iter_100.caffemodel
files/multi_classifier/: mean.binaryproto  train_iter_201.caffemodel  train_iter_201.solverstate
include/: Tracker.hpp  annotations.h  config.h  cylinder_classifier.h  cylinder_fitting_ros.h  cylinder_segmentation.h  cylinder_segmentation_hough.h  cylinder_segmentation_ransac.h  cylinder_segmentation_ros.h  cylinder_tracking_ros.h  detection_data.h  helper_functions.h  helpers.h  multiple_tracker_manager.h  network_classes.hpp  planar_top_detector.h  shape_detection_manager.h  shape_fitting_ros.h
include/nodelets/: cylinder_segmentation_ros_nodelet.h  cylinder_tracking_ros_nodelet.h  shape_fitting_ros_nodelet.h
launch/: bayesian_filtering.launch  cylinder_segmentation.launch  ork+cylinder.launch  rtabmap+ork.launch  rtabmap.launch  shape_detection_fitting.launch  shapes_2018.launch  test.launch  test_real.launch  train.launch
msg/: BoundingBox.msg  Clusters.msg  Cylinders.msg  Shape.msg  Shapes.msg  TestParameters.msg
python/: camera_stream.py  create_lmdb.py  detector_node.py  example_functions.py  example_main.py  make_predictions.py  modify_dataset.py  object_detector.py  percision_recall.py  stream_overlay.py
rviz/: cylinders.rviz  rviz.rviz  shapes.rviz  tests.rviz
scripts/: clutter.m  fitting_quality_cylinders_1.txt  fitting_quality_others_1.txt  generate_clouds.sh  get_data.sh  get_dataset.sh  get_videos.sh  gt_squeeze.txt  old.fig  old2.fig  run_fitting_tests.sh  scene_checker.py  squeeze.txt  tabletop_scenarios_tests.sh  test.m  test.sh  test_log.csv  tests.m  tests2.m  train.sh  train_log.csv
scripts/bash/: get_dataset.sh  tabletop_scenarios_tests.sh
scripts/python/: compute_results.py  dataset_mosaic.py  scene_checker.py
squeezenet/: solver.prototxt  train_val.prototxt
src/: cylinder_classifier.cpp  cylinder_classifier_test.cpp  cylinder_fitting_test.cpp  cylinder_generation.cpp  cylinder_segmentation.cpp  cylinder_segmentation.cpp.autosave  cylinder_segmentation_hough.cpp  cylinder_segmentation_ransac.cpp  cylinder_segmentation_ros.cpp  cylinder_segmentation_ros_node.cpp  cylinder_segmentation_ros_nodelet.cpp  cylinder_segmentation_test.cpp  cylinder_segmentation_test2.cpp  cylinder_segmentation_test_clutter.cpp  cylinder_segmentation_test_clutter2.cpp  cylinder_segmentation_ya.cpp  cylinder_tracking_ros.cpp  cylinder_tracking_ros_node.cpp  detection_data.cpp  object_detection.cpp  particle_filter_node.cpp  pcd_visualizer.cpp  shape_detection_fitting_ros_node.cpp
src/nodelets/: cylinder_segmentation_ros_nodelet.cpp  cylinder_tracking_ros_nodelet.cpp  shape_detection_fitting_ros_nodelet.cpp
test/: planar_top_test.cpp  ply_to_pcd.cpp  rename.cpp  results.py  shapes_2018.cpp
